# GEMM-to-SoL

./: .gitignore  README.md  pyproject.toml  setup.py
csrc/: bindings.cpp  gemm_coarsened.cu  gemm_common.h  gemm_double_buffered.cu  gemm_naive.cu  gemm_swizzled.cu  gemm_swizzled_old.cu  gemm_tiled.cu  gemm_transposed.cu  gemm_vectorized.cu
test/: benchmark.py
